--- a/views/admin/view-product.ejs
+++ b/views/admin/view-product.ejs
@@ -12,7 +12,7 @@
             <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard "
                 target="_blank"></a>
             <img src="/public/assets/images/icons/sacecart-01 1.png" class="navbar-brand-img h-100" alt="main_logo">
-            <span class="ms-1 font-weight-bold text-white">Material Dashboard</span>
+            <span class="ms-1 font-weight-bold text-white"></span>
             </a>
         </div>
         <hr class="horizontal light mt-0 mb-2">
