--- a/views/admin/view-users.ejs
+++ b/views/admin/view-users.ejs
@@ -12,7 +12,7 @@
         <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard "
           target="_blank"></a>
         <img src="/public/assets/images/icons/sacecart-01 1.png" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold text-white">Material Dashboard</span>
+        <span class="ms-1 font-weight-bold text-white"></span>
         </a>
       </div>
       <hr class="horizontal light mt-0 mb-2">
@@ -148,9 +148,6 @@
                         <tr style="background-color: rgb(227, 225, 225);">
                           <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">No</th>
                           <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">First Name
-                          <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">Last Name
-
-                          </th>
                           <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">Email
                           </th>
                           <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">Mobile
@@ -177,11 +174,6 @@
                               <td>
                                 <p class="text-xs font-weight-bold mb-0">
                                   <%=user. firstName%>
-                                </p>
-                              </td>
-                              <td>
-                                <p class="text-xs font-weight-bold mb-0">
-                                  <%=user. secondName%>
                                 </p>
                               </td>
                               <td>
