--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -22,9 +22,7 @@
                     <div class="checkout-discount">
                         <form action="#">
                             <input type="text" class="form-control" required id="checkout-discount-input">
-                            <label for="checkout-discount-input" class="text-truncate">Have a coupon? <span>Click here
-                                    to enter your code</span></label>
-                        </form>
+                            <label for="checkout-discount-input" class="text-truncate">Have a coupon? <span>Click here                      </form>
                     </div><!-- End .checkout-discount -->
 
                     <div class="row">
