--- a/views/users/otpPage.ejs
+++ b/views/users/otpPage.ejs
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-<!-- molla/login.html  22 Nov 2019 10:04:03 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Brand Kicks! Step into Style with Confidence</title>
     <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="Brand Kicks! ">
+    <meta name="description" content="Brand Kicks!">
     <meta name="author" content="p-themes">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/public/userAssets/assets/images/BRAND KICKS! white.png">
@@ -27,102 +24,95 @@
     <link rel="stylesheet" href="/public/assets/css/bootstrap.min.css">
     <!-- Main CSS File -->
     <link rel="stylesheet" href="/public/assets/css/style.css">
-    
+    <style>
+        .btn-disabled {
+            cursor: not-allowed;
+            opacity: 0.6;
+        }
+    </style>
 </head>
 <body>
     <a href="/">
         <img src="/public/userAssets/assets/images/BRAND KICKS! white.png" class="md-5" style="height: 60px; position: absolute; top: 20px; left: 20px;" alt="">
-        </a>
-<main class="main">
+    </a>
+    <main class="main">
+        <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17" style="background-image: url('/public/userAssets/assets/images/backgrounds/shoes-login.jpg')">
+            <div class="container">
+                <div class="form-box">
+                    <div class="form-tab">
+                        <ul class="nav nav-pills nav-fill" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="register-tab-2" data-toggle="tab" href="#" role="tab">OTP VERIFICATION</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content">
+                            <div class="tab-pane fade show active" id="register-2" role="tabpanel" aria-labelledby="register-tab-2">
+                                <form action="/submit-otp" method="post">
+                                    <p class="py-3">We have sent an OTP to your email</p>
 
-    <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17" style="background-image: url('/public/userAssets/assets/images/backgrounds/shoes-login.jpg')">
-        <div class="container">
-            <div class="form-box">
-                <div class="form-tab">
-                    <ul class="nav nav-pills nav-fill" role="tablist">
+                                    <div class="form-group">
+                                        <label for="register-email-2">Your OTP *</label>
+                                        <input type="text" class="form-control" id="otp" name="otp" required>
+                                    </div><!-- End .form-group -->
 
-                        <li class="nav-item">
-                            <a class="nav-link active" id="register-tab-2" data-toggle="tab" href="#" role="tab" >OTP VERIFICATION</a>
-                        </li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane fade show active" id="register-2" role="tabpanel" aria-labelledby="register-tab-2">
-                            <form action="/submit-otp " method="post">
-                              <p class="py-3">We have sent an OTP to your email</p>
+                                    <div class="mt-3">
+                                        <p class="text-danger mt-3">Time left: <span id="timer">60</span></p>
+                                        <button type="button" class="btn btn-danger btn-disabled" id="resendButton" onclick="resendOTP()">Resend OTP</button>
+                                    </div>
 
-                                <div class="form-group">
-                                    <label for="register-email-2">Your OTP *</label>
-                                    <input type="text" class="form-control" id="otp" name="otp" required>
-                                </div><!-- End .form-group -->
+                                    <div class="form-footer">
+                                        <button type="submit" class="btn btn-outline-primary-2">
+                                            <span>VERIFY OTP</span>
+                                            <i class="icon-long-arrow-right"></i>
+                                        </button>
+                                    </div><!-- End .form-footer -->
+                                </form>
+                            </div><!-- .End .tab-pane -->
+                        </div><!-- End .tab-content -->
+                    </div><!-- End .form-tab -->
+                </div><!-- End .form-box -->
+            </div><!-- End .container -->
+        </div><!-- End .login-page section-bg -->
+    </main><!-- End .main -->
 
-                                <div class="mt-3">
-                                    <p class="text-danger mt-3">Time left: <span id="timer">60</span></p>
-                                    <button class="btn btn-dander" id="resendButton" onclick="resendOTP()"><a href="/resend-otp">Resend OTP</a></button>
-                                  </div>
+    <script>
+        let countdown = 45; // Initial countdown value in seconds
+        let timerElement = document.getElementById('timer');
+        let resendButton = document.getElementById('resendButton');
+        let countdownInterval;
 
-                                <div class="form-footer">
-                                    <button type="submit" class="btn btn-outline-primary-2">
-                                        <span>VERIFY OTP</span>
-                                        <i class="icon-long-arrow-right"></i>
-                                    </button>
-                                    <!-- <a href="#" class="forgot-link">Forgot Your Password?</a> -->
-                                </div><!-- End .form-footer -->
-                                <div id="component" class="container-fluid py-3 text-center">
-                                    <p class=" m-0 px-3 py-2">
-                                        <!-- <span class="text-secondary fs-6 fw-normal font-family-Poppins">
-                                        Dont Have Account?
-                                        </span> -->
-                                        <!-- <a class="text-black fs-6 fw-normal font-family-Poppins text-decoration-underline " href="/signup" >
-                                        Signup
-                                        </a> -->
-                                    </p>
-                                </div>
-                            </form>
-                            
-                        </div><!-- .End .tab-pane -->
-                            </form> 
-                        </div><!-- .End .tab-pane -->
-                    </div><!-- End .tab-content -->
-                </div><!-- End .form-tab -->
-            </div><!-- End .form-box -->
-        </div><!-- End .container -->
-    </div><!-- End .login-page section-bg -->
-</main><!-- End .main -->
-
-
-<script>
-    let countdown = 45; // Initial countdown value in seconds
-    let timerElement = document.getElementById('timer');
-    let resendButton = document.getElementById('resendButton');
-    let countdownInterval;
-  
-    // Function to update the countdown timer
-    function updateTimer() {
-        timerElement.textContent = countdown + ' seconds';
-        countdown--;
-        resendButton.disabled = true;
-        if (countdown < 0) {
-            clearInterval(countdownInterval);
-            timerElement.textContent = '0 seconds';
-            resendButton.disabled = false;
+        // Function to update the countdown timer
+        function updateTimer() {
+            timerElement.textContent = countdown + ' seconds';
+            countdown--;
+            resendButton.classList.add('btn-disabled');
+            resendButton.disabled = true;
+            if (countdown < 0) {
+                clearInterval(countdownInterval);
+                timerElement.textContent = '0 seconds';
+                resendButton.classList.remove('btn-disabled');
+                resendButton.disabled = false;
+            }
         }
-    }
-  
-    // Function to resend OTP
-    function resendOTP() {
-        // Simulate OTP resend logic here
-        // For example, you can make an API call to send a new OTP
-  
-        // Reset the timer
-        countdown = 45;
-        timerElement.textContent = countdown + ' seconds';
-        resendButton.disabled = true;
-  
-        // Start the countdown again
+
+        // Function to resend OTP
+        function resendOTP() {
+            // Simulate OTP resend logic here
+            // For example, you can make an API call to send a new OTP
+
+            // Reset the timer
+            countdown = 45;
+            timerElement.textContent = countdown + ' seconds';
+            resendButton.classList.add('btn-disabled');
+            resendButton.disabled = true;
+
+            // Start the countdown again
+            countdownInterval = setInterval(updateTimer, 1000);
+        }
+
+        // Initial countdown start
         countdownInterval = setInterval(updateTimer, 1000);
-    }
-  
-    // Initial countdown start
-    countdownInterval = setInterval(updateTimer, 1000);
-  </script>
-<%- include('../layouts/user/footer.ejs') -%>
+    </script>
+    <%- include('../layouts/user/footer.ejs') -%>
+</body>
+</html>
