complete amount pay back amount even offer

--- a/views/layouts/user/header.ejs
+++ b/views/layouts/user/header.ejs
@@ -123,7 +123,7 @@
                             <a href="wishlist" title="Wishlist" id="wishlist-link">
                                 <div class="icon">
                                     <i class="icon-heart-o"></i>
-                                    <span class="wishlist-count badge">3</span>
+                                    <!-- <span class="wishlist-count badge"></span> -->
                                 </div>
                                 <p>Wishlist</p>
                             </a>
@@ -134,7 +134,7 @@
                             <a href="cart" class="dropdown-toggle" >
                                 <div class="icon">
                                     <i class="icon-shopping-cart"></i>
-                                    <span class="cart-count">2</span>
+                                    <!-- <span class="cart-count">2</span> -->
                                 </div>
                                 <p>Cart</p>
                             </a>
