--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -160,52 +160,68 @@
                           <%= product.orderStatus %>
                         </a>
                       </td>
-                      <td>₹ <%= product.quantity * product.productId.price %>
-                      </td>
-                      <td>
-                        <% if (product.orderStatus !=='Cancelled' && product.orderStatus !=='Delivered' ) { %>
-                          <button id="cancelButton_<%= product.productId._id %>"
-                            class="btn btn-custom btn-custom-danger"
-                            onclick="cancelOrder('<%= orders._id %>', '<%= product.productId._id %>', 'cancelButton_<%= product.productId._id %>', ' <%= product.quantity * product.productId.price %>')">Cancel</button>
-                          <% } else if (product.orderStatus==='Delivered' ) { %>
+                      <!-- Total Price Calculation -->
+                      <% if (product.productId.offer && product.productId.discountedPrice) { %>
+                        <td>₹ <%= product.quantity * product.productId.discountedPrice %>
+                        </td>
+                        <% } else { %>
+                          <td>₹ <%= product.quantity * product.productId.price %>
+                          </td>
+                          <% } %>
 
-                            <!-- Return button -->
-                            <button class="btn btn-custom btn-custom-danger" data-bs-toggle="modal"
-                              data-bs-target="#returnModal_<%= product._id %>">Return</button>
 
-                            <!-- Return Modal -->
-                            <div class="modal fade" id="returnModal_<%= product._id %>" tabindex="-1"
-                              aria-labelledby="returnModalLabel" aria-hidden="true">
-                              <div class="modal-dialog">
-                                <div class="modal-content">
-                                  <div class="modal-header">
-                                    <h5 class="modal-title" id="returnModalLabel">Return Product</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                      aria-label="Close"></button>
-                                  </div>
-                                  <div class="modal-body">
-                                    <form action="/productReturn?orderid=<%= orders._id %>&productId=<%= product.productId._id %>"
-                                      method="post">
-                                      <input type="hidden" value="<%= orders.totalAmount %>" name="totalPrice">
-                                      <div class="mb-3">
-                                        <label for="return-reason" class="form-label">Reason for return:</label>
-                                        <textarea class="form-control" id="return-reason" name="reason"
-                                          placeholder="e.g., Not in good condition" required></textarea>
+                            <td>
+                              <% if (product.orderStatus !=='Cancelled' && product.orderStatus !=='Delivered' ) { %>
+                                <button id="cancelButton_<%= product.productId._id %>"
+                                  class="btn btn-custom btn-custom-danger"
+                                  onclick="cancelOrder(
+                                    '<%= orders._id %>', 
+                                    '<%= product.productId._id %>', 
+                                    'cancelButton_<%= product.productId._id %>', 
+                                    '<%= product.quantity * (product.productId.offer && product.productId.discountedPrice ? product.productId.discountedPrice : product.productId.price) %>'
+                                  )">          Cancel
+                        <% } else if (product.orderStatus==='Delivered' ) { %>
+
+                                  <!-- Return button -->
+                                  <button class="btn btn-custom btn-custom-danger" data-bs-toggle="modal"
+                                    data-bs-target="#returnModal_<%= product._id %>">Return</button>
+
+                                  <!-- Return Modal -->
+                                  <div class="modal fade" id="returnModal_<%= product._id %>" tabindex="-1"
+                                    aria-labelledby="returnModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                      <div class="modal-content">
+                                        <div class="modal-header">
+                                          <h5 class="modal-title" id="returnModalLabel">Return Product</h5>
+                                          <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                          <form
+                                            action="/productReturn?orderid=<%= orders._id %>&productId=<%= product.productId._id %>"
+                                            method="post">
+                                            <input type="hidden"
+                                              value="<%= product.quantity * product.productId.price %>"
+                                              name="totalPrice">
+                                            <div class="mb-3">
+                                              <label for="return-reason" class="form-label">Reason for return:</label>
+                                              <textarea class="form-control" id="return-reason" name="reason"
+                                                placeholder="e.g., Not in good condition" required></textarea>
+                                            </div>
+                                            <div class="modal-footer">
+                                              <button type="button" class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Cancel</button>
+                                              <button type="submit" class="btn btn-primary">Submit</button>
+                                            </div>
+                                          </form>
+                                        </div>
                                       </div>
-                                      <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                          data-bs-dismiss="modal">Cancel</button>
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                      </div>
-                                    </form>
+                                    </div>
                                   </div>
-                                </div>
-                              </div>
-                            </div>
-                            <% } else { %>
-                              <button class="btn btn-custom btn-custom-danger" disabled>Cancelled</button>
-                              <% } %>
-                      </td>
+                                  <% } else { %>
+                                    <button class="btn btn-custom btn-custom-danger" disabled>Cancelled</button>
+                                    <% } %>
+                            </td>
 
               </tr>
               <% }); %>
@@ -293,7 +309,7 @@
       });
     }
 
-    
+
 
 
   </script>
