--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -29,6 +29,14 @@
               <span class="nav-link-text ms-1">Dashboard</span>
             </a>
           </li>
+          <li class="nav-item"></li>
+          <a class="nav-link text-white " href="/admin/top-sellers">
+              <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                  <i class="material-icons opacity-10">category</i>
+              </div>
+              <span class="nav-link-text ms-1">Best-Selling</span>
+          </a>
+      </li>
           <li class="nav-item">
             <a class="nav-link text-white " href="/admin/sales-report">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
