--- a/views/admin/view-category.ejs
+++ b/views/admin/view-category.ejs
@@ -66,6 +66,14 @@
             </a>
         </li>
         <li class="nav-item">
+            <a class="nav-link text-white" href="/admin/view-brand">
+                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <i class="material-icons opacity-10">category</i>
+                </div>
+                <span class="nav-link-text ms-1">Best-Selling</span>
+            </a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link text-white " href="/admin/sales-report">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="material-icons opacity-10">bar_chart</i>
